offer & booking update